--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1667,6 +1667,13 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.38.0:
+-Optimized session handling (for edge-case session destroy bug)
+-------------------------------------------------------------------
+
+
+
 
 
 
