--- a/misc-docs-etc/TODO.txt
+++ b/misc-docs-etc/TODO.txt
@@ -4,7 +4,6 @@
 TODO
 ///////////////////////////////////////////////////////
 
-Add support for automated install script on more debian-based systems (with openssh-server install option, and choosing the apache document root location) 
 
 Make sure programming comments are adequate throughout the app.
 
@@ -12,11 +11,11 @@ Add Dogecoin and mining calculator.
 
 Add fiat currency converter, to convert USD to GBP / EURO / etc.
 
-2-way encryption (unlocked with 8 digit PIN) for storing coin amounts (IN COOKIES ONLY, NO DATABASE STORAGE !EVER!), with "quick lock" to quickly re-hide portfolio data.
+2-way encryption option (unlocked with 6 digit PIN) for storing coin amounts (IN COOKIES ONLY, NO DATABASE STORAGE !EVER!), with "quick lock" to quickly re-hide portfolio data.
 
 SQL-based accounts for storing configuration settings per-user (including setting up new assets available at supported exchanges), BUT !NEVER! STORES PORTFOLIO DATA (FOR PRIVACY / SECURITY-SAKE).
 
-Add feature to restore chart data from the zip archive backups, with SQL-based admin authentication.
+Add feature to restore chart data from the zip archive backups (with SQL-based admin authentication ONLY).
 
 Stats in UI using chart data (if available), to show spot / volume percent changes over an end-user-defined time period (example: LTC spot price +33.62% / volume -12.83% from April 6th 2019 to November 22nd 2019).
 
@@ -24,11 +23,11 @@ Add header login nav like prototype for zilliqa block explorer (use the develope
 
 Add an alert bell icon in upcoming header login nav, and have alerts make it red and be a drop-down info bubble clicking it, rather than alerts printed in the footer.
 
-Add chart sorting by crypto and usd price / volume percentage change over 1 hour / 1 day / 1 week / 1 month / 90 days.
+Add chart sorting by crypto and usd price / volume percentage change over 1 hour / 1 day / 1 week / 1 month / 90 days / 6 months / 1 year.
 
-RESTFUL API system for requesting market values / portfolio values
+RESTFUL API system for requesting market values
 
-Simple trading bot, to run from cron / cli
+Simple trading bot, to run from cron / cli (with SQL-based admin authentication / web UI for configuration)
 
 
 ///////////////////////////////////////////////////////
@@ -37,9 +36,9 @@ MAYBE
 
 See if at all feasible to fully modularize mining calculators to be added via config settings?
 
-Using primary chart data files as the source, create extra chart data files for 1week / 1month / 3month / 6month / 1year / 2year / 4year charts, using different minimum time intervals?
+Using primary chart data files as the source, dynamically create and cache extra chart data files for 1week / 1month / 3month / 6month / 1year / 2year / 4year charts (every hour?), using different minimum time intervals, to improve scaling UI integration (UI load times, as more chart data is collected)?
 
-Maybe add security nonce to thwart CSRF attacks?
+Add security nonce to thwart CSRF attacks on cookie portfolio data / SQL-based (authenticated) admin pages?
 
-Look into more graceful 'loading...' placeholder until page is fully loaded?
+Look into graceful 'loading...' placeholder until page is fully loaded?
 
