Improved Raspberry PI auto-install script
Improved Raspberry PI auto-install script

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1683,92 +1683,10 @@ app doing the data requests, not a malicious bot)
 
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+-------------------------------------------------------------------
+3.38.0:
+-Improved Raspberry PI auto-install script
+-------------------------------------------------------------------
 
 
 
