--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1687,6 +1687,7 @@ app doing the data requests, not a malicious bot)
 3.38.0:
 -Improved Raspberry PI auto-install script
 -Improved cache error logging semantics
+-Improved documentation
 -------------------------------------------------------------------
 
 
