Additional improved chart loading UX
Additional improved chart loading UX

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1692,3 +1692,11 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.39.0:
+-Additional improved chart loading UX
+-------------------------------------------------------------------
+
+
+
+
