--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1700,4 +1700,12 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.39.0:
+-Renamed install script (for semantics)
+-------------------------------------------------------------------
+
+
+
+
 
