--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1707,5 +1707,13 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.40.0:
+-Improved auto-install script UX
+-------------------------------------------------------------------
+
+
+
+
 
 
