--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1714,6 +1714,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.40.1:
+-Fix for edge-case auto-install script error
+-------------------------------------------------------------------
+
+
+
+
 
 
 
