--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1730,6 +1730,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.41.0:
+-Improved documentation
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
