--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1737,6 +1737,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.42.0:
+-UX revisions
+-------------------------------------------------------------------
+
+
+
+
 
 
 
