--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1746,6 +1746,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.42.1:
+-Auto-install bug fix
+-Revised TODO
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
