--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1785,6 +1785,8 @@ app doing the data requests, not a malicious bot)
 3.43.0:
 -Changed Bittrex Intl brand to Bittrex Global
 -Added Binance US API support
+-CSS Tweaks
+-UX on converting keyed exchange names for use in UI
 -------------------------------------------------------------------
 
 
