--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1791,6 +1791,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.44.0:
+-UX revisions
+-------------------------------------------------------------------
+
+
+
+
 
 
 
