--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1793,6 +1793,7 @@ app doing the data requests, not a malicious bot)
 
 -------------------------------------------------------------------
 3.44.0:
+-Optimizations
 -UX revisions
 -Configuration settings for chart colors (new config.php variables)
 -------------------------------------------------------------------
