--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1810,6 +1810,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.45.1:
+-Bug fix for spot price / pairing volume percent change calculations in price alerts
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
