--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1813,6 +1813,8 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 3.45.1:
 -Bug fix for spot price / pairing volume percent change calculations in price alerts
+-Bug fix for gain / loss percent change calculations in portfolio interface
+-Minor code housekeeping
 -------------------------------------------------------------------
 
 
