UX revisions, version bump
UX revisions, version bump

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1819,6 +1819,14 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.46.0:
+-UX revisions
+-------------------------------------------------------------------
+
+
+
+
 
 
 
