Semantics cleanup, added parsing of pairing volume data
-Coding semantics cleanup
-Added parsing of pairing volume data from market API calls (for exchanges that support it)

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1838,6 +1838,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.47.0:
+-Coding semantics cleanup
+-Added parsing of pairing volume data from market API calls (for exchanges that support it)
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
