--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1859,6 +1859,8 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 3.49.0:
 -Optimizations
+-Ported BTC/USD markets to new USD markets system
+-Upgraded Zingchart library (for price charts) to latest release
 -------------------------------------------------------------------
 
 
