--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1888,6 +1888,16 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.50.0:
+-Better message queue throttling
+-Debug mode toggle in configuration file (enhanced logging / alerts)
+-Removed twitter widget external javascript call / config option (to keep javascript calls local only)
+-------------------------------------------------------------------
+
+
+
+
 
 
 
