--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1899,8 +1899,8 @@ app doing the data requests, not a malicious bot)
 
 
 -------------------------------------------------------------------
-3.50.0:
--Proper setting of FROM email when using SMTP authentication feature
+3.49.4:
+-Bug fix for setting of FROM email when using SMTP authentication feature
 -------------------------------------------------------------------
 
 
