Refined email headers when using PHP's built-in mail() function
Refined email headers when using PHP's built-in mail() function

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1905,6 +1905,15 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.50.0:
+-Refined email headers when using PHP's built-in mail() function
+-------------------------------------------------------------------
+
+
+
+
+
 
 
 
