--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1910,6 +1910,7 @@ app doing the data requests, not a malicious bot)
 -Refined email headers when using PHP's built-in mail() function
 -Added app name/version to X-Mailer header in emails (smtp mail, and php default mail function)
 -Portfolio data table / spreadsheet column name semantics
+-Many more email-to-text mobile carriers supported (for mobile text price alerts, etc)
 -------------------------------------------------------------------
 
 
