Preparations for upcoming additional Bitcoin markets (other than USD) support
Preparations for upcoming additional Bitcoin markets (other than USD) support

--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1926,6 +1926,7 @@ app doing the data requests, not a malicious bot)
 -------------------------------------------------------------------
 3.52.0:
 -Better UX for new email-to-mobile-text system configuration
+-Preparations for upcoming additional Bitcoin markets (other than USD) support
 -------------------------------------------------------------------
 
 
