--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1931,6 +1931,17 @@ app doing the data requests, not a malicious bot)
 
 
 
+-------------------------------------------------------------------
+3.53.0:
+-Added unit tests for charts/price alerts, text gateways, and coin markets configurations
+-Integrated unit tests with the debug mode config setting options
+-------------------------------------------------------------------
+
+
+
+
+
+
 
 
 
