--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1943,6 +1943,7 @@ app doing the data requests, not a malicious bot)
 3.54.0:
 -Throttling of limited APIs (to help avoid ip blacklisting)
 -More USD markets
+-Code cleanup
 -------------------------------------------------------------------
 
 
