--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1949,6 +1949,7 @@ app doing the data requests, not a malicious bot)
 -Dynamically changeable primary fiat currency globally (charts / alerts / token value / subtotal / total / tools / calculators), 
 based off the chosen Bitcoin market pairing (charts / alerts default fiat currency is changeable in configuration file).
 -Code cleanup / optimizations
+-API support for btcmarkets.net
 IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
 MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.
 -------------------------------------------------------------------
