--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1948,8 +1948,9 @@ app doing the data requests, not a malicious bot)
 -Added USDT / GBP / EUR Bitcoin markets
 -Dynamically changeable primary fiat currency globally (charts / alerts / token value / subtotal / total / tools / calculators), 
 based off the chosen Bitcoin market pairing (charts / alerts default fiat currency is changeable in configuration file).
--Code cleanup / optimizations
--API support for btcmarkets.net
+-Code cleanup / optimizations / bug fixes
+-API support for btcmarkets.net, bitpanda.com, lakebtc.com, tidebit.com, huobi.pro, cex.io
+-New trading pairs: CAD / AUD / SGD / HKD / GBP / EUR / CHF / JPY
 IMPORTANT NOTE: v4.00.0 and higher of this app REQUIRES DELETING YOUR PREVIOUS CHART DATA FROM ANY EARLIER VERSIONS.
 MAJOR IMPROVEMENTS TO THE USER EXPERIENCE HAVE BEEN MADE, WHICH ARE !NOT! BACKWARDS-COMPATIBLE.
 -------------------------------------------------------------------
