--- a/misc-docs-etc/changelog.txt
+++ b/misc-docs-etc/changelog.txt
@@ -1943,7 +1943,7 @@ app doing the data requests, not a malicious bot)
 4.00.0:
 -Bug fix of global import variable overwrite (accidentally changed value to uppercase globally)
 -Throttling of limited APIs (to help avoid ip blacklisting by exchanges requiring a separate call for each coin)
--All stablecoin base-paired charts now have 24 hour volume as corresponding stablecoin value (for UX feel of fiat charts)
+-All charts now have 24 hour volume as pairing volume (for normal UX feel charts)
 -More USD markets
 -Added USDT / GBP / EUR Bitcoin markets
 -Dynamically changeable primary fiat currency globally (charts / alerts / token value / subtotal / total / tools / calculators), 
